Mon May 10 00:48:08 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkmenu.c: Make destruction of a torn off menu work 
	like un-tearing off.

Sun May  9 21:05:38 2004  Matthias Clasen  <maclas@gmx.de>

        Merge from 2.4:

	* gtk/gtkactiongroup.c (gtk_action_group_add_action_with_accel): 
	Allow to suppress the stock accelerator by using "".  (#142196,
	David A Knight)
	
Sun May  9 02:01:13 2004  Matthias Clasen  <maclas@gmx.de>

        Merge from 2.4:
	
	* gtk/gtkcombobox.c (gtk_combo_box_list_button_released): 
	In list mode, accept the same mouse/wheel bindings on 
	the cellview as on the button.  (#136967)

Sun May  9 01:25:37 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkiconfactory.c (add_to_cache): Actually count the
	cached icons.  (#135888, Crispin Flowerday)

Sun May  9 00:03:03 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c (gtk_ui_manager_get_widget): Make sure
	that we actually return menus for nodes of type menu, not the
	menuitems they're attached to.

Sat May  8 22:50:55 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.c (gtk_action_group_set_translation_domain): 
	Add a note regarding UTF-8 requirements, proposed by 
	Mariano Suárez-Alvarez.

Sat May  8 22:43:11 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktearoffmenuitem.h: 
	* gtk/gtktearoffmenuitem.c: Put the torn_off flag back
	into the GtkTearoffMenuItem struct, since it is used
	by the Gimp, and keep it synchronized with the 
	tearoff_state property of the parent menu.

2004-05-08  Hans Breuer  <hans@breuer.org>

	* gtk/gtkfilesystemwin32.c (extract_icon) : finally also
	create the correct mask for 'pseudo mime' icons

	* gdk/win32/gdkwindow-win32.c(show_window_internal) : also
	take focus_on_map into account

	* gtk/gtkselection.c : g_message() only with DEBUG_SELECTION

	* gtk/gtkactiongroup.c gtk/gtkcombobox.c : 
	... must return a value

	* gdk/gdk.def gtk/gtk.def demos/gtk-demo/makefile.msc.in : updated
